<resources>
  <string name="app_name">Pod Creep</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_activity_login">Sign in</string>

  <string name="error_field_required">This field is required</string>

  <!-- Strings related to login -->
  <string name="prompt_username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_register">Register</string>

  <!-- Drawer items -->
  <string name="subscriptions">Subscriptions</string>
  <string name="discover">Discover</string>
  <string name="refresh">Refresh</string>
  <string name="refreshing">Refreshing…</string>

  <!-- Podcasts screen -->
  <string name="trending">Trending</string>
  <string name="search">Search</string>

  <!-- Subscriptions screens -->
  <string name="in_progress">In progress</string>
  <string name="new_releases">New releases</string>
  <string name="podcasts">Podcasts</string>

  <!-- Episodes screens -->
  <string name="play">Play</string>
  <string name="skip_forward_30">Skip forward</string>
  <string name="skip_back_10">Skip back</string>
  <string name="mark_done">Mark done</string>
  <string name="download">Download</string>
  <string name="status_downloaded">Downloaded</string>
  <string name="status_downloading">Downloading...</string>

  <!-- Notification controls -->
  <string name="pause">Pause</string>

  <string name="contentdesc_podcast_logo">Podcast logo</string>
  <string name="contentdesc_rewind_10">Rewind 10</string>
  <string name="contentdesc_forward_30">Skip forward 30</string>
</resources>
