<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.welcome.WelcomeLayout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/podcreep"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="60sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/action_sign_in"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/action_register"
        />

</merge>